fix(settings): Fixed broken styles

--- a/src/styles/material/_checkbox.scss
+++ b/src/styles/material/_checkbox.scss
@@ -35,3 +35,7 @@ mat-checkbox .mdc-checkbox {
     }
   }
 }
+
+.mat-button-toggle .mat-pseudo-checkbox {
+  display: none;
+}
